修复主页：添加YAML front matter并恢复导航按钮

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <div class="welcome-section">
     <h2>一个简洁的可复刻的博客</h2>
     <p>梦到啥我就往这上面写</p>
@@ -12,6 +16,11 @@
             <li>2025-11-19: 修复文章显示问题：使用标准的_posts目录和Jekyll配置</li>
         </ul>
     </div>
+    
+    <nav class="navigation">
+        <a href="/post/" class="nav-link">📝 博客文章</a>
+    </nav>
+</div>
 
 
 
