修复Git冲突标记并更新主页标题

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="welcome-section">
-    <h2>一个简洁的可复刻的博客</h2>
+    <h2>一个简洁且可复刻的博客</h2>
     <p>梦到啥我就往这上面写</p>
     
     <div class="recent-updates">
