修复博客文章跳转问题并恢复post目录内容 - 将post目录中的文章移动到_posts目录以确保Jekyll正确处理 - 更新文章中图片引用路径 - 保留post/index.html作为博客文章列表页面

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
     </div>
     
     <nav class="navigation">
-        <a href="/post/" class="nav-link">📝 博客文章</a>
+        <a href="{{ '/post/' | relative_url }}" class="nav-link">📝 博客文章</a>
     </nav>
 </div>
 
