--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
     </div>
     
     <nav class="navigation">
-        <a href="{{ '/showpost/' | relative_url }}" class="nav-link">📝 博客文章</a>
+        <a href="{{ '/blog/' | relative_url }}" class="nav-link">📝 博客文章</a>
     </nav>
 </div>
 
